# preferans.pro

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  run.sh
client/: CMakeLists.txt
client/resources/cards/atlas/: LICENSE
client/resources/cards/poker/: LICENSE
client/resources/html/: index.html.in
client/resources/shaders/: card_shine.fs
client/resources/small-cards/: LICENSE
client/resources/text/: default-phrases.txt
client/src/: client.cpp  client.hpp  version.hpp.in
common/: common.hpp
proto/: pref.proto
server/: CMakeLists.txt
server/config/: oleksandrkozlov.com  preferans.pro
server/src/: game_data.hpp  pref_cli.cpp  send_msg.hpp  serialization.hpp  server.cpp  server.hpp
server/tests/: test_server.cpp
tools/game_viewer/: index.html  server.py
tools/prefbuff/: index.html  server.py
